fix error with imgs on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -414,6 +414,7 @@ h6 {
 
 .promotion {
   width: 24em;
+  max-width: 95%;
   border-radius: 2px;
   background: #e53451;
   color: white;
@@ -425,6 +426,7 @@ h6 {
     display: block;
     margin: 0 auto;
     width: 15em;
+    max-width: 70%;
     margin-bottom: 2em;
     z-index: 9999;
     position: relative; }
